--- a/process-selected-text/popup.html
+++ b/process-selected-text/popup.html
@@ -3,8 +3,13 @@
   <script src='popup.js'></script>
 </head>
 <body>
-  <input type=text id=divider value=100000>
-  <button id=replace>Replace selected!</button>
-  <button id=restore>Restore selected!</button>
+<table>
+  <tr>
+    <td>Denominator</td>
+    <td><input type=text id=denominator value=1000000></td>
+    <td><button id=replace>Process!</button></td>
+    <td><button id=restore>Restore!</button></td>
+  </tr>
+</table>
 </body>
 </html>
